@@ -26,6 +26,12 @@ MysqlDriver=QMYSQL3
 MysqlReplicationTimeout=5000
 
 ;
+; The name of the Service that runs MySQL on this system. If you're
+; using MariaDB, you may have to change this to 'mariadb'.
+;
+MysqlServiceName="mysqld"
+
+;
 ; Generate a new DB snapshot and binary log on the master every 24 hours.
 ; This must be set to 'yes' in order for the 'AutoPurgeBinlogs' and
 ; ' AutoRotateTime' parameters to have any effect.
